# proof-of-action

./: .chainguard-digest  .env.local.example  .gitignore  Dockerfile  README.md  SUBMIT.md  pyproject.toml
.github/workflows/: supply-chain.yml
artifacts/: cited.md
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
dashboard/src/: App.tsx
dashboard/src/components/: Dashboard.tsx  Login.tsx
deploy/: akash-ollama-gpu.yaml  akash-public-workers.yaml  redis-tls.conf
deploy/dashboard/: package-lock.json  package.json  tailwind.config.js
deploy/dashboard/src/: App.tsx  Dashboard.tsx  SignIn.tsx  index.css  insforge.ts
docs/: PLAN.md  ROADMAP.md
fixtures/: adversarial_threads.json  sample_threads.json
insforge/functions/finalize-action/: index.ts
insforge/functions/run-demo/: index.ts
migrations/: 20260424194814_multi-tenant-rls.sql  20260424210000_realtime-boundary.sql
scripts/: demo.py  demo.sh  doctor.sh  ingest_json.py  keygen.sh  onboard.py  onboard.sh  pin-chainguard.sh  publish.py  setup_redis.sh  tls-bootstrap.sh
src/proof_of_action/: agent.py  boundary.py  crypto.py  guild_audit.py  redaction.py
src/proof_of_action/actions/: draft.py  human_review.py
src/proof_of_action/sources/: gmail.py  imessage.py
src/proof_of_action/stores/: insforge_publish.py  private_store.py  public_store.py
tests/: test_boundary.py  test_crypto.py
