[project]
name = "proof-of-action"
version = "0.1.0"
description = "Privacy-preserving action agent with provable public/private boundary."
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proof_of_action"]
